467521: [Model Import - RT] Update the Model Import to target Papyrus-RT https://bugs.eclipse.org/bugs/show_bug.cgi?id=467521
- Remove the PapyrusRT Repository from Papyrus/Extra/Tests, since it
shouldn't be required (The required plug-in is shipped with the
Migration Tool)

Change-Id: I00c9ea9adc5f0a4b389bde0ea658f28699b80f91
Signed-off-by: Camille Letavernier <camille.letavernier@cea.fr>